2010-01-19  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Oliver Hunt.

        https://bugs.webkit.org/show_bug.cgi?id=33850
        Attr.childNodes does not get updated after DOM mutations

        Test: fast/dom/Attr/child-nodes-cache.html

        * dom/Node.cpp: (WebCore::Node::notifyLocalNodeListsAttributeChanged): If the node is an
        attribute, then changing it shouldn't take the shortcut that only resets a subset of caches.

2010-01-19  John Sullivan  <sullivan@apple.com>

        https://bugs.webkit.org/show_bug.cgi?id=33854
        Would like a variant of WebHTMLRepresentation's searchForLabelsBeforeElement that returns 
        more info about where the result was found

        Reviewed by Darin Adler.

        No new tests. This just adds a couple of out parameters for the benefit of WebKit clients.

        * WebCore.base.exp:
        Updated mangled signature for export.

        * page/Frame.cpp:
        (WebCore::Frame::searchForLabelsAboveCell):
        Now fills in an out parameter with the number of characters from the start of the cell.
        (WebCore::Frame::searchForLabelsBeforeElement):
        Now fills in an out parameter with the distance as a number of characters, and another
        with a bool for whether the result was in a table cell above the current cell (otherwise
        it was found in the text before this element and after the previous element or start of form).

        * page/Frame.h:
        Updated signatures.

        * page/mac/FrameMac.mm:
        (WebCore::Frame::searchForNSLabelsAboveCell):
        Same as above. This is a parallel copy of the function using Mac-specific data structures.
        (WebCore::Frame::searchForLabelsBeforeElement):
        Ditto

2010-01-19  Jakob Petsovits  <jpetsovits@rim.com>

        Reviewed by Nikolas Zimmermann.

        [OpenVG] Add (EGL) surface/context management
        https://bugs.webkit.org/show_bug.cgi?id=33403

        The foundations for a new OpenVG port.